// accounts__user_profile/service.proto
// Generated by django-cfg django_client module
// DO NOT EDIT - This file is auto-generated

syntax = "proto3";

package cfg.v1.user_profile;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

import "accounts__user_profile/messages.proto";


message CfgAccountsProfileRetrieveResponse {
  User data = 1;
}
message CfgAccountsProfileAvatarCreateRequest {
  optional bytes file_data = 1;
}
message CfgAccountsProfileAvatarCreateResponse {
  User data = 1;
}
message CfgAccountsProfilePartialUpdateRequest {
  optional Userprofileupdaterequest body = 1;
}
message CfgAccountsProfilePartialUpdateResponse {
  User data = 1;
}
message CfgAccountsProfilePartialPartialUpdateRequest {
  optional Patcheduserprofileupdaterequest body = 1;
}
message CfgAccountsProfilePartialPartialUpdateResponse {
  User data = 1;
}
message CfgAccountsProfileUpdateUpdateRequest {
  optional Userprofileupdaterequest body = 1;
}
message CfgAccountsProfileUpdateUpdateResponse {
  User data = 1;
}
message CfgAccountsProfileUpdatePartialUpdateRequest {
  optional Patcheduserprofileupdaterequest body = 1;
}
message CfgAccountsProfileUpdatePartialUpdateResponse {
  User data = 1;
}

service UserProfileService {
  // Retrieve the current authenticated user's profile information.
  rpc CfgAccountsProfileRetrieve(google.protobuf.Empty) returns (CfgAccountsProfileRetrieveResponse);
  // Upload avatar image for the current authenticated user. Accepts multipart/form-data with 'avatar' field.
  rpc CfgAccountsProfileAvatarCreate(CfgAccountsProfileAvatarCreateRequest) returns (CfgAccountsProfileAvatarCreateResponse);
  // Partially update the current authenticated user's profile information. Supports avatar upload.
  rpc CfgAccountsProfilePartialUpdate(CfgAccountsProfilePartialUpdateRequest) returns (CfgAccountsProfilePartialUpdateResponse);
  // Partially update the current authenticated user's profile information. Supports avatar upload.
  rpc CfgAccountsProfilePartialPartialUpdate(CfgAccountsProfilePartialPartialUpdateRequest) returns (CfgAccountsProfilePartialPartialUpdateResponse);
  // Update the current authenticated user's profile information.
  rpc CfgAccountsProfileUpdateUpdate(CfgAccountsProfileUpdateUpdateRequest) returns (CfgAccountsProfileUpdateUpdateResponse);
  // Update the current authenticated user's profile information.
  rpc CfgAccountsProfileUpdatePartialUpdate(CfgAccountsProfileUpdatePartialUpdateRequest) returns (CfgAccountsProfileUpdatePartialUpdateResponse);
}